--- a/pom.xml
+++ b/pom.xml
@@ -99,13 +99,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://3.7.46.147:8081/repository/flipkart-release/</url>
+	      <url>http://3.7.46.147:8081/repository/amazon-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.7.46.147:8081/repository/flipkart-snapshot/</url>
+	      <name>Mithun Technologies Nexus Repository </name>
+	      <url>http://3.7.46.147:8081/repository/amazon-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
