--- a/pom.xml
+++ b/pom.xml
@@ -93,14 +93,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://3.7.46.147:8081/repository/amazon-release/</url>
+	      <name>Sreekart Releases Nexus Repository</name>
+	      <url>http://18.216.138.19:8081/repository/sreekart-release//</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Nexus Repository </name>
-	      <url>http://3.7.46.147:8081/repository/amazon-snapshot/</url>
+	      <name>Sreekart Nexus Repository </name>
+	      <url>http://18.216.138.19:8081/repository/sreekart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
