--- a/pom.xml
+++ b/pom.xml
@@ -93,14 +93,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>mttkart Releases Nexus Repository</name>
-	      <url>http://18.117.112.110:8081/repository/maven-releases/</url>
+	      <name>maven-web-app Releases Nexus Repository</name>
+	      <url>http://18.117.112.110:8081/repository/maven-app-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>mttkart Nexus Repository </name>
-	      <url>http://18.117.112.110:8081/repository/maven-snapshots/</url>
+	      <name>maven-web-app Nexus Repository </name>
+	      <url>http://18.117.112.110:8081/repository/maven-app-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
